src/css/templates/secondary.css
/* Secondary Template */

.t-secondary {
  display: grid;
  grid-template-rows: auto 1fr auto;
  min-height: 100vh;
}

.t-secondary__image-1 {
  min-height: 30rem;
}

.t-secondary__content-window-1 {
  display: grid;
  grid-template-rows: auto 1fr;

  .c-lead {
    align-self: center;
    margin-block-end: var(--uc3-space-lg);
    margin-inline: var(--template-inline-content-padding);
  }
}

.t-secondary__content-1 {
  padding-block: var(--uc3-space-base);
  padding-inline: var(--template-inline-content-padding);
  font-size: var(--text-font-size);
  
  > :not(.c-breadcrumb, h2) {
    line-height: var(--text-line-height);
  }
}

